UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_NPR_Data_History__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Modified_Date__c</fullName>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Modified_by_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modified by User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NPR_Data_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPR Data</label>
        <referenceTo>Phoenix_NPR_Data__c</referenceTo>
        <relationshipLabel>NPR Data History</relationshipLabel>
        <relationshipName>NPR_Data_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_New_Value__c</fullName>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Previous_Value__c</fullName>
        <label>Previous Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NPR Data History</label>
    <nameField>
        <label>NPR Data History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPR Data History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>